--- a/svt-projekat2024/src/main/resources/application.properties
+++ b/svt-projekat2024/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/sitPass?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 server.servlet.context-path=/api
 
